--- a/templates/index.twig
+++ b/templates/index.twig
@@ -3,5 +3,8 @@
 {% block title %}Index{% endblock %}
 
 	{% block content %}
-<p>Initial skeleton</p>
+<table class="c1">
+	<tr class="h"><td class="b">Index page</td></tr>
+	<tr><td class="b n1">This thing is very work in progress yeah</td></tr>
+</table>
 	{% endblock %}
