--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,43 +1,93 @@
 /// General Styling \\\
 body {
-	background-color: #0c0c0c;
-	color: #eee;
-	font-family: "Fira Code", monospace;
-	margin: 0;
+	line-height: 1.3;
+	margin: 10px auto;
+	max-width: 1440px;
+}
+table.c1 {
+	border-spacing: 0px;
+	border-collapse: collapse;
+	width: 100%;
+
+	tr.h, tr.c {
+		text-align: center;
+	}
+	td.nb {
+		border: 0px none;
+	}
 }
 
+/// Links \\\
 a {
-	color: #55cf55;
 	text-decoration: none;
+	font-weight: bold;
+}
+a:link, a:visited	{ color: #a0ff80 }
+a:active, a:hover	{ color: #FFFFFF }
+
+/// Header table styling \\\
+.headertext {
+	text-align: center;
+	font-size: 42pt; // beeeg
+	margin: 50px;
 }
 
-/// Header & Footer \\\
+.headermenu {
+	a {
+		margin-left: 20px;
+		display: inline-block;
+		padding: 7px 0px;
+	}
 
-header, footer {
-	background-color: #080808;
-	padding: 15px 0;
-}
+	&.right  {
+		text-align:right;
 
-header {
-	.navbar {
-		max-width: 1000px;
-		margin: auto;
-		padding: 0 50px;
-
-		.title {
-			font-size: 24pt;
-			font-weight: bold;
+		a {
+			margin-right: 20px;
+			display: inline-block;
+			padding: 7px 0px;
 		}
 	}
 }
 
-.container {
-	max-width: 1280px;
-	margin: 20px auto;
-	padding: 0 20px;
+/// Header and footer spacing \\\
+/// (Don't repeat the mistake of slapping <br> everywhere) \\\\
+.header {
+	margin-bottom: 1.75em;
+}
+.footer {
+	margin-top: 1.75em;
 }
 
-footer {
-	margin-top: 50px;
-	text-align: center;
+/// Example theme styling (voxelmanip_retro) \\\
+body {
+	background: #011b01;
+	color: #f8f8f8;
+	font-family: 'Open Sans'; // TODO: webfont
+}
+
+table.c1 {
+	border: 2px solid #38c016;
+
+	tr.h {
+		font-weight: bold;
+	}
+
+	tr.c, tr.h {
+		font-size: 0.95em;
+		text-align: center;
+	}
+
+	td.b {
+		border: 1px solid #38c016;
+		padding: 5px;
+	}
+
+	tr.h, td.h {
+		background: rgba(32,98,2,0.7);
+	}
+
+	tr.n1, td.n1 { background: rgba(0,0,0,0.6); }
+	tr.n2, td.n2 { background: rgba(16,49,1,0.65); }
+	tr.n3, td.n3 { background: rgba(0,0,0,0.6); }
 }
