Implement initial account system

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,6 +5,10 @@
 	{% block content %}
 <table class="c1">
 	<tr class="h"><td class="b">Index page</td></tr>
-	<tr><td class="b n1">This thing is very work in progress yeah</td></tr>
+	<tr><td class="b n1">
+		<p>This thing is very work in progress yeah</p>
+
+		{% if log %}<p>Logged in as: {{ userdata.name }}</p>{% endif %}
+	</td></tr>
 </table>
 	{% endblock %}
