--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -18,7 +18,7 @@
 				<a href="./">Index</a>
 			</td>
 			<td class="n2 nb menu right">
-				<a href="./">Another Link</a>
+				<a href="register.php">Register</a><a href="login.php">Login</a>
 			</td>
 		</tr>
 	</table>
