--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -14,25 +14,21 @@
 	</tr>
 	{% set i = 1 %}
 	{% for thread in threads %}
-		{% if thread.sticky and not time %}
-			{% set tr = 1 %}
+		{% if i % 2 %}
+			{% set zebra = 1 %}
 		{% else %}
-			{% if i % 2 %}
-				{% set tr = 2 %}
-			{% else %}
-				{% set tr = 3 %}
-			{% endif %}
+			{% set zebra = 2 %}
 		{% endif %}
 
-		<tr class="center">
-			<td class="b n1"></td>
-			<td class="b n2 left">
+		<tr class="center n{{ zebra }}">
+			<td class="b"></td>
+			<td class="b left">
 				<a href="thread.php?id={{ thread.id }}">{{ thread.title }}</a>
 			</td>
-			<td class="b n1">{{ userlink(thread, 'u_') }}</td>
-			<td class="b n1">{{ thread.posts-1 }}</td>
-			<td class="b n1">{{ thread.views }}</td>
-			<td class="b n2">TODO</td>
+			<td class="b">{{ userlink(thread, 'u_') }}</td>
+			<td class="b">{{ thread.posts-1 }}</td>
+			<td class="b">{{ thread.views }}</td>
+			<td class="b">TODO</td>
 		</tr>
 		{% set i = i + 1 %}
 	{% endfor %}
