--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -91,6 +91,29 @@ a:active, a:hover	{ color: #FFFFFF }
 	color: #fa7f7f;
 }
 
+.threadpost {
+	margin-bottom: 0.75em;
+
+	&:last-child { margin-bottom: 0 }
+
+	.topbar_1, .topbar_2, .sidebar {
+		border: 0 !important;
+	}
+
+	.topbar_1 {
+		width: 180px;
+		height: 32px;
+	}
+	.topbar_2 {
+		padding: 7px 10px;
+	}
+
+	.topbar_1, .sidebar {
+		text-align: center;
+	}
+}
+
+
 /// Example theme styling (voxelmanip_retro) \\\
 
 $primary: #38c016;
