--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -91,6 +91,10 @@ a:active, a:hover	{ color: #FFFFFF }
 	color: #fa7f7f;
 }
 
+.breadcrumb {
+	margin: 1.75em 10px;
+}
+
 .threadpost {
 	margin-bottom: 0.75em;
 
