--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,6 +1,8 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Index{% endblock %}
+{% set title = "Index" %}
+
+{% set nobreadcrumb = true %}
 
 	{% block content %}
 {% if just_registered %}
