--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ forum.title }}{% endblock %}
+{% set title = forum.name %}
 
 	{% block content %}
 <table class="c1">
