--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Login{% endblock %}
+{% set title = "Login" %}
 
 	{% block content %}
 <form class="reglog" method="POST"><table class="c1">
