--- a/templates/register.twig
+++ b/templates/register.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Register{% endblock %}
+{% set title = "Register" %}
 
 	{% block content %}
 <form class="reglog" method="POST"><table class="c1">
