--- a/templates/thread.twig
+++ b/templates/thread.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}{{ thread.title }}{% endblock %}
+{% set title = thread.title %}
 
 	{% block content %}
 {% for post in posts %}
