--- a/templates/login.twig
+++ b/templates/login.twig
@@ -4,8 +4,8 @@
 
 	{% block content %}
 <form class="reglog" method="POST"><table class="c1">
-	<tr class="h"><td class="b">Login</td></tr>
-	<tr><td class="b n1 center">
+	<tr class="h"><td>Login</td></tr>
+	<tr><td class="n1 center">
 		{% if error %}
 			<p class="error">Error: {{ error }}</p>
 		{% endif %}
