--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<table class="c1 header">
-		<tr><td class="b n1 text" colspan="2">
+		<tr><td class="n1 text" colspan="2">
 			<img src="{{ config.logo }}">
 		</td></tr>
 		<tr>
@@ -48,7 +48,7 @@
 	{% endif %}
 
 	<table class="c1 footer">
-		<tr><td class="b n3">
+		<tr><td class="n3">
 			Powered by Forum&trade;<br>
 			{{ profiler_stats() }}
 		</td></tr>
