--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,27 +7,27 @@
 	{% block content %}
 {% if just_registered %}
 	<table class="c1">
-		<tr><td class="b n1">You have successfully registered and are now logged in.</td></tr>
+		<tr><td class="n1">You have successfully registered and are now logged in.</td></tr>
 	</table><br>
 {% endif %}
 
 <table class="c1">
 	<tr class="h">
-		<td class="b" colspan="2">Forum</td>
-		<td class="b" style="width:60px">Threads</td>
-		<td class="b" style="width:60px">Posts</td>
-		<td class="b" style="width:150px">Last post</td>
+		<td colspan="2">Forum</td>
+		<td style="width:60px">Threads</td>
+		<td style="width:60px">Posts</td>
+		<td style="width:150px">Last post</td>
 	</tr>
 	{% for forum in forums %}
 		<tr class="center">
-			<td class="b n1" style="width:30px"></td>
-			<td class="b n2 left">
+			<td class="n1" style="width:30px"></td>
+			<td class="n2 left">
 				<a href="forum.php?id={{ forum.id }}">{{ forum.name }}</a>
 				<div style="margin-top:3px">{{ forum.description }}</div>
 			</td>
-			<td class="b n1">{{ forum.threads }}</td>
-			<td class="b n1">{{ forum.posts }}</td>
-			<td class="b n2">TODO</td>
+			<td class="n1">{{ forum.threads }}</td>
+			<td class="n1">{{ forum.posts }}</td>
+			<td class="n2">TODO</td>
 		</tr>
 	{% endfor %}
 </table>
