Make database more akin to VMF for easy migration

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -13,7 +13,7 @@
 <body>
 	<table class="c1 header">
 		<tr><td class="n1 text" colspan="2">
-			<img src="{{ config.logo }}">
+			<a href="./"><img src="{{ config.logo }}"></a>
 		</td></tr>
 		<tr>
 			<td class="n2 nb menu">
