--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = forum.name %}
+{% set title = forum.title %}
 
 	{% block content %}
 <table class="c1">
