--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -2,6 +2,10 @@
 
 {% set title = forum.title %}
 
+{% if log %}
+	{% set actions = {"newthread.php": "New thread"} %}
+{% endif %}
+
 	{% block content %}
 <table class="c1">
 	<tr class="h">
