--- a/templates/index.twig
+++ b/templates/index.twig
@@ -23,7 +23,7 @@
 
 		<table class="c1">
 			<tr class="h">
-				<td colspan="2">{{ categories[forum.cat] }}</td>
+				<td colspan="2" class="left">{{ categories[forum.cat] }}</td>
 				<td style="width:60px">Threads</td>
 				<td style="width:60px">Posts</td>
 				<td style="width:150px">Last post</td>
