--- a/templates/newthread.twig
+++ b/templates/newthread.twig
@@ -16,6 +16,8 @@
 	<tr class="n1">
 		<td class="nb"></td>
 		<td class="nb">
+			{{ posttoolbar() }}
+
 			<textarea name="message" id="message" rows="12" cols="80">{{ message }}</textarea>
 
 			<div class="actionbar">
