--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -18,7 +18,7 @@
 		</td></tr>
 		<tr>
 			<td class="n2 nb menu">
-				<a href="./">Index</a>
+				<a href="./">Index</a><a href="faq.php">FAQ</a>
 			</td>
 			<td class="n2 nb menu right">
 				{% if log %}
