nobreadcrumb for error pages

--- a/templates/_error.twig
+++ b/templates/_error.twig
@@ -1,10 +1,11 @@
 {% extends "_layout.twig" %}
 
 {% set title = err_title %}
+{% set nobreadcrumb = true %}
 
 	{% block content %}
 <table class="c1">
-	<tr class="h"><td class="b h center">Erorr - {{ err_title }}</td></tr>
+	<tr class="h"><td class="b h center">Error - {{ err_title }}</td></tr>
 	<tr><td class="b n1 center">{{ err_message | raw }}</td></tr>
 </table>
 	{% endblock %}
