Swallow trailing newlines of quotes, makes quote pyramids pretties and makes me happier

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -191,7 +191,7 @@ table.postformatting {
 // Quotes
 
 .quote {
-	margin: 10px 30px;
+	margin: 10px 30px 30px 30px;
 
 	.author {
 		font-style: italic;
