--- a/templates/thread.twig
+++ b/templates/thread.twig
@@ -2,6 +2,10 @@
 
 {% set title = thread.title %}
 
+{% if log %}
+	{% set actions = {("newreply.php?id="~id) : "New reply"} %}
+{% endif %}
+
 	{% block content %}
 {% for post in posts %}
 	{{ threadpost(post) }}
