Add pagination to thread.php and forum.php!!!!

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -100,6 +100,14 @@ a:active, a:hover	{ color: #FFFFFF }
 	}
 }
 
+.pagination {
+	margin: 1.75em 10px 0;
+
+	span {
+		padding: 0 5px;
+	}
+}
+
 .threadpost {
 	margin-bottom: 0.75em;
 
