Misc bunch of fixes

--- a/templates/_error.twig
+++ b/templates/_error.twig
@@ -5,7 +5,7 @@
 
 	{% block content %}
 <table class="c1">
-	<tr class="h"><td class="b h center">Error - {{ err_title }}</td></tr>
-	<tr><td class="b n1 center">{{ err_message | raw }}</td></tr>
+	<tr class="h"><td class="center">Error - {{ err_title }}</td></tr>
+	<tr><td class="n1 center">{{ err_message | raw }}</td></tr>
 </table>
 	{% endblock %}
