Add online users listing on index page

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -50,9 +50,17 @@
 </table>
 
 <br><table class="c1 faq">
+	<tr class="h"><td class="left">Online users (over the past 15 minutes)</td></tr>
+	<tr><td class="n1">
+		<p>{{ online_users_count }} user{% if online_users_count != 1 %}s{% endif %} online:
+			{% for user in online_users %}{{ userlink(user) }}{% endfor %}</p>
 
+		{% if guests_online %}
+		<p>In addition there {% if guests_online != 1 %}are{% else %}is{% endif %} {{ guests_online }} guest{% if guests_online != 1 %}s{% endif %} online.</p>
+		{% endif %}
+	</td></tr>
+</table><br><table class="c1 faq">
 	<tr class="h"><td class="left">Statistics</td></tr>
-
 	<tr><td class="n1">
 		<p>Total posts: <strong>{{ stats.p }}</strong>
 			&mdash; Total threads: <strong>{{ stats.t }}</strong>
