--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -18,7 +18,7 @@
 		</td></tr>
 		<tr>
 			<td class="n2 nb menu">
-				<a href="./">Index</a><a href="faq.php">FAQ</a><a href="memberlist.php">Member list</a><a href="forum.php?time=604800">Latest posts</a>
+				<a href="./">Index</a><a href="faq.php">FAQ</a><a href="memberlist.php">Member list</a><a href="activeusers.php">Active users</a><a href="forum.php?time=604800">Latest posts</a>
 			</td>
 			<td class="n2 nb menu right">
 				{% if log %}
