--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -58,8 +58,12 @@
 
 	<table class="c1 footer">
 		<tr><td class="n3">
-			Powered by Forum&trade;<br>
-			{{ profiler_stats() }}
+			<span class="stats">{{ profiler_stats() }}</span>
+
+			<img src="assets/poweredbycirrus.png" class="poweredby" title="~~ I'm in the clouds ~~">
+
+			Cirrusboard<br>
+			&copy; 2022 ROllerozxa, <a href="credits.php">et al</a>.
 		</td></tr>
 	</table>
 </body>
