Add preliminary edit profile page

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -22,7 +22,7 @@
 			</td>
 			<td class="n2 nb menu right">
 				{% if log %}
-					{{ userlink(userdata) }}<a href="">Log out</a>
+					{{ userlink(userdata) }}<a href="editprofile.php">Edit profile</a><a href="">Log out</a>
 				{% else %}
 					<a href="register.php">Register</a><a href="login.php">Login</a>
 				{% endif %}
